<resources>
    <string name="app_name">Phone Call Timer</string>

    <!-- main screen-->
    <string name="mode_countdown_description">hang up in</string>
    <string name="mode_timer_description">hang up at</string>
    <string name="mode_timer">timer</string>
    <string name="mode_countdown">countdown</string>

    <!-- countdown / timer fragment -->
    <string name="timer_number_value">%1$s</string>
    <string name="timer_hrs">hrs</string>
    <string name="timer_mins">mins</string>
    <string name="timer_secs">secs</string>
    <string name="timer_colon">:</string>
    <string name="timer_am">AM</string>
    <string name="timer_pm">PM</string>
    <string name="timer_enabled">Stop</string>
    <string name="timer_disabled">Start</string>
    <string name="permissions_rationale">We need your permission in order to hang up phone calls</string>
    <string name="no_active_call">No active phone call to kill... Resetting timer...</string>
    <string name="call_kill_success">We\'ve hung up your phone call</string>

</resources>