<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="8">

        <TextView
            android:id="@+id/timer_hours"
            style="@style/TimerText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="12" />

        <TextView
            style="@style/TimerColonText"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/timer_colon" />

        <TextView
            android:id="@+id/timer_minutes"
            style="@style/TimerText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="19" />

        <TextView
            style="@style/TimerColonText"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/timer_colon" />

        <TextView
            android:id="@+id/timer_seconds"
            style="@style/TimerText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="15" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3">

        <TextView
            style="@style/TimerLabelText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/timer_hrs" />

        <TextView
            style="@style/TimerLabelText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/timer_mins" />

        <TextView
            style="@style/TimerLabelText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/timer_secs" />

    </LinearLayout>

</LinearLayout>